apps/headlamp/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      serviceAccountName: headlamp
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:latest
          args:
            - "-in-cluster"
            - "-plugins-dir=/headlamp/plugins"
          ports:
            - containerPort: 4466
---
apiVersion: v1
kind: Service
metadata:
  name: headlamp-svc
  namespace: headlamp
spec:
  selector:
    app: headlamp
  ports:
    - port: 4466
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.local.lamers.tech`)
      kind: Rule
      services:
        - name: headlamp-svc
          port: 4466
  tls:
    secretName: headlamp-cert-tls
